# Sysml

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: mdk.md
frontend/: package-lock.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: app.js
frontend/src/components/layout/: nav-group.tsx  nav-user.tsx  team-switcher.tsx
frontend/src/components/layout/data/: sidebar-data.ts
frontend/src/features/dashboard/: index.tsx
frontend/src/features/sysml-workbench/: index.tsx
frontend/src/lib/: sysml-api.ts
mdk/: __init__.py
mdk/jupyter/: __init__.py  example_analysis.ipynb  sysml_docgen_notebook.py  thermal_analysis_sync.ipynb
mdk/jupyter/.ipynb_checkpoints/: example_analysis-checkpoint.ipynb  sysml_docgen_notebook-checkpoint.py  thermal_analysis_sync-checkpoint.ipynb
mdk/matlab/: example_analysis.m  sysml_docgen_sync.m
sysml_docgen/: __init__.py  app.py  config.py  docgen.py  files.py  mdk.py
sysml_docgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_docgen.py  test_jupyter_mdk.py
tools/: mdk_sync.py
